--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
 		"astro": "astro"
 	},
 	"dependencies": {
-		"astro": "^2.10.12"
+		"@astrojs/solid-js": "^2.2.1",
+		"astro": "^2.10.12",
+		"solid-js": "^1.4.3"
 	}
 }
