--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
 	},
 	"dependencies": {
 		"@astrojs/solid-js": "^2.2.1",
+		"@astrojs/tailwind": "^4.0.0",
 		"astro": "^2.10.12",
-		"solid-js": "^1.4.3"
+		"solid-js": "^1.4.3",
+		"tailwindcss": "^3.0.24"
 	}
 }
