--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@astrojs/tailwind": "^4.0.0",
 		"astro": "^2.10.12",
 		"solid-js": "^1.4.3",
-		"tailwindcss": "^3.0.24"
+		"tailwindcss": "^3.0.24",
+		"tiny-invariant": "^1.3.1"
 	}
 }
