--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
 	"dependencies": {
 		"@astrojs/solid-js": "^2.2.1",
 		"@astrojs/tailwind": "^4.0.0",
+		"@astrojs/ts-plugin": "^1.1.3",
 		"astro": "^2.10.12",
-		"solid-js": "^1.4.3",
+		"solid-js": "^1.7.11",
 		"tailwindcss": "^3.0.24",
 		"tiny-invariant": "^1.3.1"
 	}
